# gear-bridges

./: .dockerignore  .env.template  .gitignore  .gitmodules  .yarnrc.yml  Cargo.toml  Dockerfile  Dockerfile.dockerignore  GenesisConfig.toml  README.md  eslint.config.mjs  flake.nix  lerna.json  package.json  prove_circom.sh  rust-toolchain.toml
checkpoints-relayer/: Cargo.toml
checkpoints-relayer/src/: main.rs  metrics.rs  replay_back.rs  sync_update.rs  utils.rs
checkpoints-relayer/src/tests/: mod.rs
checkpoints-relayer/src/utils/: mod.rs  slots_batch.rs
circom-verifier/: .dockerignore  Cargo.toml  Dockerfile.generate-circom-verifier  plonky2_proof.json
circom-verifier/circom/: package.json
circom-verifier/circom/circuits/: constants.circom  gates.circom  goldilocks_ext.circom
circom-verifier/circom/e2e_tests/: run.sh
circom-verifier/circom/hardhat/: hardhat.config.ts
circom-verifier/poseidon-permutation-rs/: Cargo.toml  build.rs  wrapper.h
circom-verifier/poseidon-permutation-rs/src/: bindings.rs
circom-verifier/src/: config.rs  gate_verification_codes.rs  lib.rs  verifier.rs
circuits/plonky2_blake2b256/: Cargo.toml
circuits/plonky2_blake2b256/src/: circuit.rs  lib.rs  utils.rs
circuits/plonky2_ecdsa/: Cargo.toml
circuits/plonky2_ed25519/: Cargo.toml
circuits/plonky2_ed25519/src/: lib.rs
circuits/plonky2_sha256/: Cargo.toml
circuits/plonky2_sha256/src/: split_base.rs
circuits/plonky2_u32/: Cargo.toml
circuits/plonky2_u32/src/: witness.rs
cli-utils/: Cargo.toml
cli-utils/src/: common.rs  ethereum.rs  gear.rs  lib.rs  prometheus.rs
eth-client/: Cargo.toml
eth-client-alloy/: Cargo.toml
eth-client-alloy/src/: abi.rs  convert.rs  error.rs  lib.rs  msg.rs  proof.rs
eth-client/src/: error.rs  lib.rs
ethereum-client/: Cargo.toml
ethereum-client/src/: abi.rs  convert.rs  error.rs  lib.rs  msg.rs
ethereum-common/: Cargo.toml
ethereum-common/src/: keccak_hasher.rs  lib.rs  memory_db.rs  merkle.rs  network.rs  patricia_trie.rs  rlp_node_codec.rs  signing_root.rs  utils.rs
ethereum-common/src/base_types/: bits.rs  byte_list.rs  bytes_fixed.rs  fixed_array.rs  list.rs  mod.rs
ethereum-common/src/beacon/: block.rs  block_body.rs  block_header.rs  common.rs  execution_payload.rs  light.rs  mod.rs  tests.rs
ethereum/client/: Cargo.toml  build.rs
ethereum/client/src/: Cargo.toml  abi.rs  convert.rs  error.rs  lib.rs  proof.rs  tests.rs
ethereum_beacon_client/: Cargo.toml
ethereum_beacon_client/src/: lib.rs  utils.rs
gear-common/: Cargo.toml
gear-common/src/: api_provider.rs  lib.rs  retry_api.rs
gear-programs/: Cargo.toml
gear-programs/bridging-payment/: Cargo.toml  README.md  build.rs
gear-programs/bridging-payment-vara-supply/: Cargo.toml  README.md  build.rs
gear-programs/bridging-payment-vara-supply/app/: Cargo.toml
gear-programs/bridging-payment-vara-supply/client/: Cargo.toml  build.rs
gear-programs/bridging-payment-vara-supply/src/: lib.rs
gear-programs/bridging-payment-vara-supply/tests/: gtest.rs
gear-programs/bridging-payment/app/: Cargo.toml  build.rs
gear-programs/bridging-payment/client/: Cargo.toml  build.rs
gear-programs/bridging-payment/src/: lib.rs  wasm.rs
gear-programs/bridging-payment/tests/: gtest.rs
gear-programs/bridging-payment/wasm/: .binpath  Cargo.toml  bridge-payment.idl  build.rs
gear-programs/checkpoint-light-client/: Cargo.toml  README.md  build.rs
gear-programs/checkpoint-light-client/app/: Cargo.toml
gear-programs/checkpoint-light-client/client/: Cargo.toml  build.rs
gear-programs/checkpoint-light-client/io/: Cargo.toml
gear-programs/checkpoint-light-client/src/: lib.rs
gear-programs/checkpointeths/: Cargo.toml  build.rs
gear-programs/checkpointeths/io/: Cargo.toml
gear-programs/checkpointeths/src/: lib.rs  merkle.rs  state.rs  tests.rs  wasm.rs
gear-programs/common/: Cargo.toml
gear-programs/common/src/: lib.rs
gear-programs/erc20-relay/: Cargo.toml  README.md  build.rs
gear-programs/erc20-relay/app/: Cargo.toml  (+1 more)
gear-programs/eth-events-common/: Cargo.toml
gear-programs/eth-events-deneb/: Cargo.toml  README.md  build.rs
gear-programs/eth-events-electra/: Cargo.toml  README.md  build.rs
gear-programs/ethereum-event-client/: Cargo.toml  README.md  build.rs
gear-programs/grc20-gateway/: Cargo.toml
gear-programs/historical-proxy/: Cargo.toml  README.md  build.rs
gear-programs/proof-storage/: Cargo.toml
gear-programs/vara-tokenizer/: Cargo.toml  README.md  build.rs  extended_vft_wasm.opt.wasm
gear-programs/vft/: Cargo.toml  README.md  build.rs
gear-programs/vft-client/: Cargo.toml  build.rs  vft.idl
gear-programs/vft-common/: Cargo.toml
gear-programs/vft-gateway/: Cargo.toml  README.md  build.rs
gear-programs/vft-manager/: Cargo.toml  README.md  build.rs  vft_manager.idl
gear-programs/vft-service/: Cargo.toml
gear-programs/vft-treasury/: Cargo.toml  README.md  build.rs
gear-programs/vft-vara/: Cargo.toml  README.md  build.rs
gear-programs/wrapped-vara/: Cargo.toml  README.md  build.rs
gear-rpc-client/: Cargo.toml
gear-rpc-client/src/: dto.rs  lib.rs
mock-contract/: Cargo.toml  README.md  build.rs
mock-contract/src/: lib.rs  wasm.rs
prover/: Cargo.toml  README.md
prover/src/: block_finality.rs  block_justification.rs  common.rs  final_proof.rs  header_chain.rs  latest_validator_set.rs  lib.rs  merkle_proof.rs  message_sent.rs  next_validator_set.rs  serialization.rs  utils.rs  validator_set_hash.rs
relayer/: Cargo.toml  build.rs  config.toml.example
relayer-rpc/: Cargo.toml  build.rs
relayer-rpc/proto/: merkle_roots.proto
relayer-rpc/src/: lib.rs  merkle_roots.rs
relayer/src/: common.rs  config.rs  fetch_authority_set_state.rs  genesis_config.rs  hex_utils.rs  kill_switch.rs  lib.rs  main.rs  metrics.rs  proof_storage.rs  prover_interface.rs  queue_cleaner.rs  relay.rs  relay_merkle_roots.rs  relay_messages.rs  rpc.rs  serve.rs  server.rs
relayer/tests/: live_rpc_reconnect.rs  podman_rpc_failure.rs
tests/: Cargo.toml
tests/src/: historical_proxy.rs  lib.rs  transport_errors.rs  vft.rs
(+1685 files in other folders)
