[workspace]

members = [
    "ethereum/client",
    "gear-rpc-client",
    "prover",
    "relayer",
    "circuits/*",
    "ethereum-common",
    "gear-programs/bridging-payment",
    "gear-programs/bridging-payment/src/wasm",
    "gear-programs/vft-gateway",
    "gear-programs/vft-gateway/src/wasm",
    "gear-programs/*",
    "gear-programs/checkpoint-light-client/io",
    "utils-prometheus",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
gear-rpc-client = { path = "./gear-rpc-client" }
prover = { path = "./prover" }
plonky2_blake2b256 = { path = "./circuits/plonky2_blake2b256" }
plonky2_sha512 = { path = "./circuits/plonky2_sha512" }
plonky2_ed25519 = { path = "./circuits/plonky2_ed25519" }
plonky2_ecdsa = { path = "./circuits/plonky2_ecdsa" }
plonky2_u32 = { path = "./circuits/plonky2_u32" }
ethereum-client = { path = "./ethereum/client" }
ethereum-common = { path = "ethereum-common", default-features = false }

bridging_payment = { path = "gear-programs/bridging-payment" }
bridging_payment_wasm = { path = "gear-programs/bridging_payment/src/wasm" }
vft-gateway-app = { path = "gear-programs/vft-gateway" }
vft_gateway_wasm = { path = "gear-programs/vft-gateway/src/wasm" }
gear_proof_storage = { path = "gear-programs/proof-storage" }
checkpoint_light_client-io = { path = "gear-programs/checkpoint-light-client/io", default-features = false }
utils-prometheus = { path = "utils-prometheus" }
checkpoint_light_client = { path = "gear-programs/checkpoint-light-client", default-features = false }

plonky2 = { git = "https://github.com/gear-tech/plonky2.git", rev = "4a620f4d79efe9233d0e7682df5a2fc625b5420e" }
plonky2_field = { git = "https://github.com/gear-tech/plonky2.git", rev = "4a620f4d79efe9233d0e7682df5a2fc625b5420e" }
plonky2_util = { git = "https://github.com/gear-tech/plonky2.git", rev = "4a620f4d79efe9233d0e7682df5a2fc625b5420e" }
plonky2_maybe_rayon = { git = "https://github.com/gear-tech/plonky2.git", rev = "4a620f4d79efe9233d0e7682df5a2fc625b5420e" }

# Coordinates of `EdwardsPoint` made public in fork.
curve25519-dalek = { git = "https://github.com/gear-tech/curve25519-dalek", rev = "f63777fbeeb181944097bdcaeb9384ac158ec931" }

ahash = "0.7.8"
anyhow = "1.0.86"
ark-bls12-381 = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4", default-features = false }
ark-ec = { version = "0.4.2", default-features = false }
ark-ff = { version = "0.4.2", default-features = false }
ark-scale = { version = "0.0.12", default-features = false }
axum = "0.7.5"
bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }
blake2 = "0.10.6"
bytes = "1.6.0"
clap = { version = "4.4.13", features = ["derive", "env"] }
circular-buffer = { version = "0.1.7", default-features = false, features = [
    "alloc",
] }
derive_more = "0.99.17"
dotenv = "0.15.0"
env_logger = "0.9.0"
ethereum-types = { version = "0.14.1", default-features = false, features = [
    "serialize",
    "codec",
] }
extended_vft_wasm = { git = "https://github.com/gear-foundation/standards/", branch = "gstd-pinned-v1.5.0"}
ff = { version = "0.13.0", features = ["derive"] }
futures = { version = "0.3.30", features = ["executor"] }
futures-util = "0.3.28"
git-download = "0.1"
hex = { version = "0.4.3", default-features = false }
hex-literal = "0.4.1"
itertools = "0.10.5"
jemallocator = "0.5.0"
keccak-hash = "0.10.0"
lazy_static = "1.4.0"
libc = "0.2.153"
log = "0.4.14"
num = { version = "0.4", features = ["rand"] }
paste = "1.0.14"
pretty_env_logger = "0.5.0"
prometheus = { version = "0.13.0", default-features = false }
rand = { version = "0.8.5", default-features = false, features = ["getrandom"] }
rand_chacha = "0.3.1"
rayon = "1.5.3"
reqwest = "0.11.24"
ring = { git = "https://github.com/gear-tech/ring.git", branch = "gear-v0.17.8", default-features = false, features = [
    "alloc",
] }
scale-info = { version = "2.10", default-features = false, features = [
    "derive",
] }
serde = { version = "1.0", default-features = false, features = [
    "alloc",
    "derive",
] }
serde_json = "1.0"
sha2 = "0.10"
static_assertions = "1.1.0"
thiserror = "1.0.61"
tokio = { version = "1.23.0", features = ["full"] }
tree_hash = { git = "https://github.com/gear-tech/tree_hash.git", branch = "gear-v0.6.0", default-features = false }
tree_hash_derive = { git = "https://github.com/gear-tech/tree_hash.git", branch = "gear-v0.6.0" }
unroll = "0.1.5"

# Gear/Substrate deps
gstd = { version = "=1.5.0", features = ["nightly"] }
gtest = "=1.5.0"
gwasm-builder = { version = "=1.5.0", package = "gear-wasm-builder" }
gmeta = "=1.5.0"
gear-wasm-builder = { version = "=1.5.0", default-features = false }
gsdk = "=1.5.0"
gclient = "=1.5.0"
gear-core = "=1.5.0"
gbuiltin-bls381 = { git = "https://github.com/gear-tech/gear.git", tag = "v1.5.0" }
gbuiltin-eth-bridge =  { git = "https://github.com/gear-tech/gear.git", tag = "v1.5.0" }
pallet-gear-eth-bridge-rpc-runtime-api = { git = "https://github.com/gear-tech/gear.git", tag = "v1.5.0", default-features = false, features = [
    "std",
] }
sails-idl-gen = "0.3.0"
sails-client-gen = "0.3.0"
sails-rs = "0.3.0"

subxt = "0.32.1"
sc-consensus-grandpa = { version = "0.10.0-dev", git = "https://github.com/gear-tech/polkadot-sdk.git", branch = "gear-v1.4.0", default-features = false }
sp-runtime = { version = "24.0.0", git = "https://github.com/gear-tech/polkadot-sdk.git", branch = "gear-v1.4.0", default-features = false }
sp-consensus-grandpa = { version = "4.0.0-dev", git = "https://github.com/gear-tech/polkadot-sdk.git", branch = "gear-v1.4.0", default-features = false }
parity-scale-codec = { version = "3.6.4", default-features = false, features = [
    "derive",
] }
trie-db = { version = "0.28.0", default-features = false }
sp-trie = { version = "22.0.0", git = "https://github.com/gear-tech/polkadot-sdk.git", branch = "gear-v1.4.0", default-features = false }
sp-core = { version = "21.0.0", git = "https://github.com/gear-tech/polkadot-sdk.git", branch = "gear-v1.4.0", default-features = false }
primitive-types = { version = "0.12.2", default-features = false }
binary-merkle-tree = { version = "4.0.0-dev", git = "https://github.com/gear-tech/polkadot-sdk.git", branch = "gear-v1.4.0", default-features = false }

# Alloy deps
alloy = { version = "0.2.0", package = "alloy", features = [
    "sol-types",
    "contract",
    "pubsub",
    "providers",
    "signers",
    "signer-local",
    "transports",
    "transport-http",
    "network",
    "node-bindings",
    "rpc",
    "rpc-client",
    "json-rpc",
    "rpc-types",
] }
