[workspace]

members = [
    "mock-contract",
    "ethereum/client",
    "gear-rpc-client",
    "prover",
    "relayer",
    "circuits/*",
    "ethereum_beacon_client",
    "ethereum-common",
    "gear-programs/bridging-payment",
    "gear-programs/bridging-payment/app",
    "gear-programs/bridging-payment/client",
    "gear-programs/vft-manager",
    "gear-programs/vft-manager/app",
    "gear-programs/vft-manager/client",
    "gear-programs/*",
    "gear-programs/checkpoint-light-client/app",
    "gear-programs/checkpoint-light-client/client",
    "gear-programs/eth-events-deneb/app",
    "gear-programs/eth-events-deneb/client",
    "gear-programs/eth-events-electra/app",
    "gear-programs/eth-events-electra/client",
    "gear-programs/historical-proxy",
    "gear-programs/historical-proxy/app",
    "gear-programs/historical-proxy/client",
    "gear-programs/vft/app",
    "gear-programs/vft/client",
    "gear-programs/vft-vara/app",
    "gear-programs/vft-vara/client",
    "utils-prometheus",
    "tools/checkpoints-tool",
    "tools/vft-tool",
    "tools/genesis-config",
    "tools/governance",
    "tests",
    "gear-common",
    "tools/vft-manager-tool",
    "js/bridge-js/js-test",
    "js/bridge-js/ping",
]

resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"

[workspace.dependencies]
actix-web = "4.11.0"
mock-contract = { path = "./mock-contract" }
relayer = { path = "./relayer" }
gear-rpc-client = { path = "./gear-rpc-client" }
prover = { path = "./prover" }
plonky2_blake2b256 = { path = "./circuits/plonky2_blake2b256" }
plonky2_sha512 = { path = "./circuits/plonky2_sha512" }
plonky2_ed25519 = { path = "./circuits/plonky2_ed25519" }
plonky2_ecdsa = { path = "./circuits/plonky2_ecdsa" }
plonky2_u32 = { path = "./circuits/plonky2_u32" }
ethereum-client = { path = "./ethereum/client" }
ethereum_beacon_client = { path = "ethereum_beacon_client" }
ethereum-common = { path = "ethereum-common", default-features = false }
gear-common = { path = "gear-common" }
cli-utils = { path = "cli-utils" }

bridging-payment = { path = "gear-programs/bridging-payment" }
bridging-payment-app = { path = "gear-programs/bridging-payment/app" }
bridging-payment-client = { path = "gear-programs/bridging-payment/client" }
vft-manager = { path = "gear-programs/vft-manager" }
vft-manager-app = { path = "gear-programs/vft-manager/app" }
vft-manager-client = { path = "gear-programs/vft-manager/client" }
gear_proof_storage = { path = "gear-programs/proof-storage" }
utils-prometheus = { path = "utils-prometheus" }
checkpoint-light-client = { path = "gear-programs/checkpoint-light-client" }
checkpoint-light-client-app = { path = "gear-programs/checkpoint-light-client/app" }
checkpoint-light-client-client = { path = "gear-programs/checkpoint-light-client/client" }
checkpoint-light-client-io = { path = "gear-programs/checkpoint-light-client/io", default-features = false }
eth-events-common = { path = "gear-programs/eth-events-common" }
eth-events-deneb = { path = "gear-programs/eth-events-deneb" }
eth-events-deneb-app = { path = "gear-programs/eth-events-deneb/app" }
eth-events-deneb-client = { path = "gear-programs/eth-events-deneb/client" }
eth-events-electra = { path = "gear-programs/eth-events-electra" }
eth-events-electra-app = { path = "gear-programs/eth-events-electra/app" }
eth-events-electra-client = { path = "gear-programs/eth-events-electra/client" }
historical-proxy-app = { path = "gear-programs/historical-proxy/app" }
historical-proxy-client = { path = "gear-programs/historical-proxy/client" }
historical-proxy = { path = "gear-programs/historical-proxy" }
vft = { path = "gear-programs/vft" }
vft-app = { path = "gear-programs/vft/app" }
vft-client = { path = "gear-programs/vft/client" }
vft-common = { path = "gear-programs/vft-common" }
vft-vara = { path = "gear-programs/vft-vara" }
vft-vara-app = { path = "gear-programs/vft-vara/app" }
vft-vara-client = { path = "gear-programs/vft-vara/client" }

# Contracts' deps

plonky2 = { git = "https://github.com/gear-tech/plonky2.git", rev = "81e7273ec8bcf048c80689ee7606dcc153cb92cd" }
plonky2_field = { git = "https://github.com/gear-tech/plonky2.git", rev = "81e7273ec8bcf048c80689ee7606dcc153cb92cd" }
plonky2_util = { git = "https://github.com/gear-tech/plonky2.git", rev = "81e7273ec8bcf048c80689ee7606dcc153cb92cd" }
plonky2_maybe_rayon = { git = "https://github.com/gear-tech/plonky2.git", rev = "81e7273ec8bcf048c80689ee7606dcc153cb92cd" }

# Coordinates of `EdwardsPoint` made public in fork.
curve25519-dalek = { git = "https://github.com/gear-tech/curve25519-dalek", rev = "f63777fbeeb181944097bdcaeb9384ac158ec931" }

ahash = "0.7.8"
anyhow = "1.0.86"
ark-bls12-381 = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4", default-features = false }
ark-ec = { version = "0.4.2", default-features = false }
ark-ff = { version = "0.4.2", default-features = false }
ark-scale = { version = "0.0.12", default-features = false }
axum = "0.7.5"
bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }
blake2 = "0.10.6"
bytes = "1.6.0"
cgo_oligami = "0.3"
circular-buffer = { version = "0.1.7", default-features = false, features = [
    "alloc",
] }
clap = { version = "4.5.41", features = ["derive", "env"] }
derive_more = "0.99.17"
dotenv = "0.15.0"
env_logger = "0.9.0"
humantime = "2.2.0"
ethereum-types = { version = "0.14.1", default-features = false, features = [
    "serialize",
    "codec",
    "rlp",
] }
ff = { version = "0.13.0", features = ["derive"] }
futures = { version = "0.3.30", features = ["executor"] }
futures-util = "0.3.28"
getrandom = { version = "0.2", default-features = false }
hash-db = { version = "0.15.2", default-features = false }
hash256-std-hasher = { version = "0.15.2", default-features = false }
hex = { version = "0.4.3", default-features = false }
hex-literal = "0.4.1"
itertools = "0.10.5"
jemallocator = "0.5.0"
keccak-hash = "0.10.0"
lazy_static = "1.4.0"
libc = "0.2.153"
log = "0.4.14"
memory-db = { version = "0.27.0", default-features = false }
mockall = "0.12"
num = { version = "0.4", features = ["rand"] }
paste = "1.0.14"
pretty_env_logger = "0.5.0"
prometheus = { version = "0.13.0", default-features = false }
rand = { version = "0.8.5", default-features = false, features = ["getrandom"] }
rand_chacha = "0.3.1"
rayon = "1.5.3"
reqwest = { version = "0.11.24", features = ["json"] }
ring = { git = "https://github.com/gear-tech/ring.git", branch = "gear-v0.17.8", default-features = false, features = [
    "alloc",
] }
rlp = { version = "0.5.2", default-features = false }
ruzstd = "0.5.0"
scale-info = { version = "2.10", default-features = false, features = [
    "derive",
] }

serde = { version = "1.0", default-features = false, features = [
    "alloc",
    "derive",
] }
serde_json = "1.0"
sha2 = "0.10"
sled = "0.34.7"
static_assertions = "1.1.0"
thiserror = { version = "2.0.11", default-features = false }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
tokio = { version = "1.23.0", features = ["full"] }
toml = "0.9"
tree_hash = { git = "https://github.com/gear-tech/tree_hash.git", branch = "gear-v0.6.0", default-features = false }
tree_hash_derive = { git = "https://github.com/gear-tech/tree_hash.git", branch = "gear-v0.6.0" }
unroll = "0.1.5"
uuid = { version = "1.17.0", features = ["v4", "v7", "serde"] }
chrono = "0.4.41"
# Temporary workaround - https://github.com/gear-tech/gear-bridges/actions/runs/19660617523/job/56306084288?pr=753
zerocopy = "=0.8.27"
zeroize = "1.8.1"
async-trait = "0.1.88"
url = "2.5.7"
# Gear/Substrate deps
gprimitives = { version = "1.9.2", default-features = false }
gstd = { version = "1.9.2", features = ["nightly"] }
gtest = "1.9.2"
gear-wasm-builder = { version = "1.9.2", default-features = false }
gsdk = "1.9.2"
gclient = "1.9.2"
gear-core = { version = "1.9.2", default-features = false }
gbuiltin-bls381 = { version = "1.9.2", default-features = false }
gbuiltin-eth-bridge = { version = "1.9.2", default-features = false }
gear-core-errors = "1.9.2"
pallet-gear-eth-bridge-primitives = { version = "1.9.2", default-features = false }
# TODO: remove idl-gen and client-gen
sails-idl-gen = { version = "0.9.2" }
sails-client-gen = { version = "0.9.2" }
sails-rs = { version = "0.9.2" }
awesome-sails = { git = "https://github.com/gear-tech/awesome-sails", rev = "269014d", default-features = false }
awesome-sails-services = { git = "https://github.com/gear-tech/awesome-sails", rev = "269014d", default-features = false, features = [
    "vft",
    "vft-admin",
    "vft-extension",
    "vft-metadata",
    "vft-native-exchange",
    "vft-native-exchange-admin",
] }

subxt = "0.37.0"
sc-consensus-grandpa = { version = "0.30.0", default-features = false }
sp-runtime = { version = "39.0.1", default-features = false }
sp-consensus-grandpa = { version = "21.0.0", default-features = false }
parity-scale-codec = { version = "3.7.5", default-features = false, features = [
    "derive",
] }
trie-db = { version = "0.29.0", default-features = false }
sp-trie = { version = "37.0.0", default-features = false }
sp-core = { version = "34.0.0", default-features = false }
primitive-types = { version = "0.12.2", default-features = false }

# Alloy deps
alloy-consensus = { version = "1.0", default-features = false, features = [
    "serde",
] }
alloy-eips = { version = "1.0", default-features = false }
alloy-rlp = { version = "0.3.12", default-features = false }
alloy-primitives = { version = "1.1", default-features = false }
alloy-sol-types = { version = "1.1", default-features = false }
alloy = { version = "1.0", package = "alloy", features = [
    "sol-types",
    "contract",
    "pubsub",
    "providers",
    "provider-ws",
    "signers",
    "signer-local",
    "transports",
    "transport-ws",
    "network",
    "node-bindings",
    "rpc",
    "rpc-client",
    "json-rpc",
    "rpc-types",
    "serde",
] }
