[package]
name = "checkpoints-relayer"
version.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
tokio.workspace = true
checkpoint_light_client-io = { workspace = true, features = ["std"] }
checkpoint_light_client = { workspace = true, features = ["std"] }
parity-scale-codec.workspace = true

[dev-dependencies]
gclient.workspace = true
ark-bls12-381 = { workspace = true, features = ["std"] }
ark-serialize = { workspace = true, features = ["std"] }
serde = { workspace = true, features = ["std"] }
futures.workspace = true
hex = { workspace = true, features = ["std"] }
reqwest.workspace = true
serde_json.workspace = true
anyhow.workspace = true
