[package]
name = "checkpoints-relayer"
version.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
tokio.workspace = true
checkpoint_light_client-io = { workspace = true, features = ["std"] }
checkpoint_light_client = { workspace = true, features = ["std"] }
parity-scale-codec.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["std"] }
reqwest.workspace = true
anyhow.workspace = true
ark-serialize = { workspace = true, features = ["std"] }
log.workspace = true
pretty_env_logger.workspace = true
gclient.workspace = true
futures.workspace = true
hex = { workspace = true, features = ["std"] }
