[package]
name = "circom_verifier"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
itertools.workspace = true
keccak-hash.workspace = true
log.workspace = true
num.workspace = true
plonky2.workspace = true
plonky2_field.workspace = true
plonky2_util.workspace = true
rand_chacha.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
static_assertions.workspace = true
unroll.workspace = true
rand.workspace = true

poseidon-permutation = { path = "./poseidon-permutation-rs" }
