[package]
name = "ethereum-common"
version = "0.1.0"
edition.workspace = true
description = "Various entities used in Ethereum ecosystem"

[dependencies]
parity-scale-codec = { workspace = true, features = ["bit-vec"] }
serde.workspace = true
tree_hash.workspace = true
tree_hash_derive.workspace = true
hex = { workspace = true, features = ["alloc"] }
ethereum-types.workspace = true
derive_more.workspace = true
bitvec.workspace = true
scale-info = { workspace = true, features = ["bit-vec"] }
hex-literal.workspace = true
ring.workspace = true

[dev-dependencies]
serde_json.workspace = true

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "serde/std",
    "tree_hash/std",
    "hex/std",
    "ethereum-types/std",
    "bitvec/std",
    "scale-info/std",
    "ring/std",
]
