[package]
name = "ethereum-common"
version = "0.1.0"
edition.workspace = true
description = "Various entities used in Ethereum ecosystem"

[dependencies]
parity-scale-codec = { workspace = true, features = ["bit-vec"] }
serde.workspace = true
tree_hash.workspace = true
tree_hash_derive.workspace = true
hex = { workspace = true, features = ["alloc"] }
ethereum-types.workspace = true
derive_more.workspace = true
bitvec.workspace = true
scale-info = { workspace = true, features = ["bit-vec"] }
hex-literal.workspace = true
ring.workspace = true
hash-db = { version = "0.15.2", default-features = false }
hash256-std-hasher = { version = "0.15.2", default-features = false }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
rlp = { version = "0.5.2", default-features = false }
trie-db = { version = "0.22.6", default-features = false }
memory-db = { version = "0.27.0", default-features = false }
alloy-consensus = { version = "0.2.1", default-features = false }
alloy-eips = { version = "0.2.1", default-features = false }
alloy-rlp = { version = "0.3.8", default-features = false }
alloy-primitives = { version = "0.7.7", default-features = false }

[dev-dependencies]
serde_json.workspace = true

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "serde/std",
    "tree_hash/std",
    "hex/std",
    "ethereum-types/std",
    "bitvec/std",
    "scale-info/std",
    "ring/std",
    "hash-db/std",
    "hash256-std-hasher/std",
    "rlp/std",
    "trie-db/std",
    "memory-db/std",
    "alloy-consensus/std",
    "alloy-eips/std",
    "alloy-rlp/std",
    "alloy-primitives/std",
]
