[package]
name = "ethereum-common"
version = "0.1.0"
edition.workspace = true
description = "Various entities used in Ethereum ecosystem"

[dependencies]
parity-scale-codec = { workspace = true, features = ["bit-vec"] }
serde.workspace = true
tree_hash.workspace = true
tree_hash_derive.workspace = true
hex = { workspace = true, features = ["alloc"] }
ethereum-types.workspace = true
derive_more.workspace = true
bitvec.workspace = true
scale-info = { workspace = true, features = ["bit-vec"] }
hex-literal.workspace = true
ring.workspace = true
hash-db.workspace = true
hash256-std-hasher.workspace = true
memory-db.workspace = true
rlp.workspace = true
tiny-keccak.workspace = true
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-rlp.workspace = true
alloy-primitives.workspace = true
trie-db = { version = "0.22.6", default-features = false }

[dev-dependencies]
serde_json.workspace = true

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "serde/std",
    "tree_hash/std",
    "hex/std",
    "ethereum-types/std",
    "bitvec/std",
    "scale-info/std",
    "ring/std",
    "hash-db/std",
    "hash256-std-hasher/std",
    "memory-db/std",
    "rlp/std",
    "alloy-consensus/std",
    "alloy-eips/std",
    "alloy-rlp/std",
    "alloy-primitives/std",
    "trie-db/std",
]
