[workspace]

members = ["bridging-payment", "grc20-gateway"]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
grc20-gateway = { path = "./grc20-gateway" }

gstd = "1.4.1"
gear-wasm-builder = "1.4.1"
parity-scale-codec = { version = "3.6.4", default-features = false }
primitive-types = { version = "0.12.2", default-features = false }
scale-info = { version = "2.5.0", default-features = false }
