[package]
name = "gear-rpc-client"
version.workspace = true
edition.workspace = true

[dependencies]
prover.workspace = true

hex.workspace = true
futures-util.workspace = true

anyhow.workspace = true
gsdk.workspace = true
subxt.workspace = true
pallet-grandpa.workspace = true
pallet-babe.workspace = true
sc-consensus-grandpa.workspace = true
sp-runtime.workspace = true
sp-consensus-grandpa.workspace = true
sp-consensus-babe.workspace = true
sp-state-machine.workspace = true
parity-scale-codec.workspace = true
trie-db.workspace = true
sp-trie.workspace = true
sp-core.workspace = true
