[package]
name = "gear-rpc-client"
version.workspace = true
edition.workspace = true

[dependencies]
hex.workspace = true
futures-util.workspace = true

anyhow.workspace = true
gsdk.workspace = true
subxt.workspace = true
sc-consensus-grandpa.workspace = true
sp-runtime.workspace = true
sp-consensus-grandpa.workspace = true
parity-scale-codec.workspace = true
trie-db.workspace = true
sp-trie.workspace = true
sp-core.workspace = true
pallet-gear-bridge-rpc-runtime-api.workspace = true
